--- a/styles.css
+++ b/styles.css
@@ -110,4 +110,10 @@ a:hover {
     width: 150px;
     height: 150px;
   }
+  
+  .project-list {
+    display: flex !important;
+    flex-direction: column !important;
+    gap: 1rem; /* Tambahkan jarak antar elemen jika diperlukan */
+  }
 }
